--- a/www/src/toast.css
+++ b/www/src/toast.css
@@ -163,20 +163,6 @@
 }
 
 /* ----------------------------------------------
- * TOAST-PAGE
- * ------------------------------------------- */
-
-.toast-page {
-  background: #fff;
-  transform: translate3d(100%, 0, 0);
-  transition: transform .3s ease;
-}
-
-.toast-slide-left {
-  transform: translate3d(0, 0, 0);
-}
-
-/* ----------------------------------------------
  * TOAST-LOADING
  * ------------------------------------------- */
 
@@ -216,6 +202,14 @@
 
 .toast-slide-down {
   animation: slideDown ease .3s forwards;
+}
+
+.toast-slide-left {
+  animation: slideLeft ease .3s forwards;
+}
+
+.toast-slide-right {
+  animation: slideRight ease .3s forwards;
 }
 
 .toast-scale-in {
@@ -259,6 +253,24 @@
   }
   to {
     transform: translate3d(0, 100%, 0);
+  }
+}
+
+@keyframes slideLeft {
+  from {
+    transform: translate3d(100%, 0, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideRight {
+  from {
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    transform: translate3d(100%, 0, 0);
   }
 }
 
