--- a/www/index.css
+++ b/www/index.css
@@ -129,14 +129,16 @@ main .item .icon {
 }
 
 .server-page .item>div {
-  width: 80px;
+  width: 100px;
 }
 
 .server-page input {
   flex: 1;
+  outline: 0;
   font: inherit;
   border: 0;
   padding: 5px;
+  background: transparent;
 }
 
 /* ----------------------------------------------
