add fingerprint auth

--- a/www/index.css
+++ b/www/index.css
@@ -146,13 +146,54 @@ main .item .icon {
   width: 100px;
 }
 
-.server-page input {
+.server-page input[type="text"] {
   flex: 1;
   outline: 0;
   font: inherit;
   border: 0;
   padding: 5px;
   background: transparent;
+}
+
+/* ----------------------------------------------
+ * Switch style
+ * ------------------------------------------- */
+
+.toast-switch {
+  -webkit-appearance: none;
+  outline: none;
+  user-select: none;
+  position: relative;
+  width: 46px;
+  height: 28px;
+  border-radius: 20px;
+  border: 1px solid #dfdfdf;
+  background: #fdfdfd;
+  transition: background-color ease 0.4s;
+}
+
+.toast-switch:before {
+  content: '';
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  top: 0;
+  left: 0;
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+  transition: left 0.3s;
+}
+
+.toast-switch:checked {
+  box-shadow: #0c7 0 0 0 16px inset;
+  background-color: #0c7;
+  border-color: #0c7;
+  transition: border-color 0.4s, background-color ease 0.4s;
+}
+
+.toast-switch:checked:before {
+  left: 18px;
 }
 
 /* ----------------------------------------------
