--- a/www/index.css
+++ b/www/index.css
@@ -146,7 +146,7 @@ main .item .icon {
   width: 100px;
 }
 
-.server-page input[type="text"] {
+.server-page input[type="text"], .server-page input[type="password"] {
   flex: 1;
   outline: 0;
   font: inherit;
