add download action

--- a/www/index.css
+++ b/www/index.css
@@ -18,6 +18,10 @@ body {
   top: 53px;
 }
 
+.transfer-progress {
+  color: #ccc;
+}
+
 /* ----------------------------------------------
  * header
  * ------------------------------------------- */
